# LLMLocalAgent

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
configs/: claude-code.json  cursor.json  opencode.json
scripts/: download_model.py  mcp_server.py  start_server.sh
