[project]
name = "qwen3-coder"
version = "0.1.0"
description = "Qwen3 Coder 30B A3B vLLM + MCP Server"
requires-python = ">=3.11"
dependencies = [
    "vllm==0.12.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "accelerate>=1.12.0",
    "transformers>=4.57.3",
]

[tool.uv]
package = false
